<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_sstri_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_state_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_sstri_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tv_sstri_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/unknown_service_state"
                android:textStyle="bold"
                android:text="@string/service_state_unknown"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>