<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stustirling.telephony_monitor.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_ma_service_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/unknown_service_state"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/service_state_unknown"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_ma_gsm_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_ma_gsm_area_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gsm_area_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ma_gsm_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_ma_gsm_cell_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gsm_cell_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ma_gsm_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_ma_gsm_psc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gsm_psc_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ma_gsm_psc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ma_signal_strength_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/signal_strength_unknown"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ma_signal_strength_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal_strength_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ma_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


    <fragment
        android:name="com.stustirling.telephony_monitor.datapoints.DataPointFragment"
        android:id="@+id/frag_ma_datapointfrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

</LinearLayout>
